Responsive table list view spacing fixes

--- a/packages/components/tables/_tables.scss
+++ b/packages/components/tables/_tables.scss
@@ -86,29 +86,41 @@
   margin-block-start: 0;
   margin-block-end: 0;
 
+  .nhsuk-table__list-view {
+    margin-bottom: 0;
+  }
+
   figcaption {
     @include nhsuk-font($size: 22, $weight: bold);
     text-align: left;
   }
+
   .nhsuk-table__row {
     margin-block-start: 0;
+    margin-bottom: nhsuk-spacing(4);
+    &:last-child {
+      margin-block-end: 0;
+    }
   }
+
   .nhsuk-table__cell {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
 
-    padding: nhsuk-spacing(2) nhsuk-spacing(3) nhsuk-spacing(2) 0;
+    padding: nhsuk-spacing(2) 0;
 
     &:last-child {
       border-bottom: 3px solid $color_nhsuk-grey-4;
     }
+
 
     dd {
       margin-inline-start: 0;
       box-sizing: border-box;
 
       margin: 0 1em 0 0; // so that the label and the data can't touch
+      display: table-cell;
     }
 
     dt {
@@ -116,6 +128,8 @@
       flex-grow: 1; // So that the text-align right always works
 
       box-sizing: border-box;
+
+      display: table-cell;
     }
   }
 }
